[tool.poetry]
name = "rbm"
version = "0.1.0"
description = ""
authors = ["KernTHeAce <vanatuz2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kedro = "*"
torch = "<1.13"
pandas = "*"
torchvision = "*"
scikit-learn = "*"
mlflow = "^2.3.0"
torchmetrics = "^0.11.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
